--- a/workspace.ipynb
+++ b/workspace.ipynb
@@ -8,10 +8,78 @@
    "source": [
     "import numpy as np\n",
     "import cvxpy as cp\n",
-    "from general_method.basis_generator import rand_moment, generate_basis, sel_seq, rand_rho, rand_projs, proj_mul\n",
+    "from public.basis_generator import rand_moment\n",
     "from numpy import linalg as LA\n",
     "import matplotlib.pyplot as plt\n",
     "import random"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = rand_moment(dim=3,\n",
+    "             num_obs=2,\n",
+    "             len_seq=2,\n",
+    "             num_out=3,\n",
+    "             sel_sequences = [2],\n",
+    "             remove_last_out = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(17, 17)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = rand_moment(dim=3,\n",
+    "             num_obs=3,\n",
+    "             len_seq=2,\n",
+    "             num_out=3,\n",
+    "             sel_sequences = [2],\n",
+    "             remove_last_out = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(37, 37)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.shape"
    ]
   },
   {
@@ -808,7 +876,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
