add data and notebook

--- a/public/Inequality_in_233_scenario.ipynb
+++ b/public/Inequality_in_233_scenario.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import cvxpy as cp\n",
-    "from basis_generator import rand_moment"
+    "from basis_generator import rand_moment\n",
+    "import json"
    ]
   },
   {
@@ -83,11 +84,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
     "dimX = 4\n",
+    "dim_base = 3\n",
     "num_obs = 2\n",
     "len_seq = 3\n",
     "num_out = 3\n",
@@ -106,9 +108,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8201995428547537\n"
+     ]
+    }
+   ],
    "source": [
     "for __ in range(5):\n",
     "    X_t, rho_t, P_t = rand_moment(dimX, num_obs, len_seq, num_out, [len_seq], remove_last_out)\n",
@@ -125,20 +135,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-0.7488070170722095\n"
+     ]
+    }
+   ],
    "source": [
-    "np.real(np.diag(X)[1:] @ coef)"
+    "Q = np.real(np.diag(X)[1:] @ coef)\n",
+    "print(Q)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-0.5690064392946877\n"
+     ]
+    }
+   ],
+   "source": [
+    "C = NPA_bound(coef,X_basis)\n",
+    "print(C)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
-    "NPA_bound(coef,X_basis)"
+    "data = {}\n",
+    "# data[\"Moment Matrix\"] = X\n",
+    "# data[\"Quantum State\"] = rho\n",
+    "# data[\"Measurements\"] = P\n",
+    "data[\"Inequality\"] = coef\n",
+    "data[\"Classical Bound\"] = C\n",
+    "data[\"Quantum Bound\"] = Q\n",
+    "\n",
+    "data[\"num of observables\"] = num_obs\n",
+    "data[\"maximum length of sequences\"] = len_seq\n",
+    "data[\"num of outcomes\"] = num_out\n",
+    "data[\"dimension behavior\"] = dimX\n",
+    "data[\"dimension base\"] = dim_base\n",
+    "\n",
+    "NAME = '{}-num_obs-{}-len_seq-{}-out_max-{}-dim_behavior-{}-dim_base'.format(num_obs, len_seq, num_out, dimX, dim_base)\n",
+    "\n",
+    "with open(\"dimension_witness/\" + NAME + '.json', 'w') as fp:\n",
+    "    json.dump(data, fp, indent=2)\n",
+    "    \n",
+    "np.save(\"dimension_witness/\" + NAME + \"-moment_matrix\", X)\n",
+    "np.save(\"dimension_witness/\" + NAME + \"-state\", rho)\n",
+    "np.save(\"dimension_witness/\" + NAME + \"-measurements\", P)"
    ]
   },
   {
