--- a/public/Inequality_in_322_scenario.ipynb
+++ b/public/Inequality_in_322_scenario.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import cvxpy as cp\n",
-    "from basis_generator import rand_moment"
+    "from basis_generator import rand_moment\n",
+    "import json"
    ]
   },
   {
@@ -83,11 +84,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
     "dimX = 3\n",
+    "dim_base = 2\n",
     "num_obs = 3\n",
     "len_seq = 2\n",
     "num_out = 2\n",
@@ -106,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +120,7 @@
     }
    ],
    "source": [
-    "for __ in range(10):\n",
+    "for __ in range(100):\n",
     "    X_t, rho_t, P_t = rand_moment(dimX, num_obs, len_seq, num_out, [len_seq], remove_last_out)\n",
     "    eta_t, coef_t = single_behavior_visibility(X_t, X_basis)\n",
     "    if eta_t < eta:\n",
@@ -133,42 +135,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "-0.6372680915558379"
-      ]
-     },
-     "execution_count": 95,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-0.6372680915558379\n"
+     ]
     }
    ],
    "source": [
-    "np.real(np.diag(X)[1:] @ coef)"
+    "Q = np.real(np.diag(X)[1:] @ coef)\n",
+    "print(Q)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "-0.47904664250464357"
-      ]
-     },
-     "execution_count": 96,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-0.47904664250464357\n"
+     ]
     }
    ],
    "source": [
-    "NPA_bound(coef,X_basis)"
+    "C = NPA_bound(coef,X_basis)\n",
+    "print(C)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = {}\n",
+    "# data[\"Moment Matrix\"] = X\n",
+    "# data[\"Quantum State\"] = rho\n",
+    "# data[\"Measurements\"] = P\n",
+    "data[\"Inequality\"] = coef\n",
+    "data[\"Classical Bound\"] = C\n",
+    "data[\"Quantum Bound\"] = Q\n",
+    "\n",
+    "data[\"num of observables\"] = num_obs\n",
+    "data[\"maximum length of sequences\"] = len_seq\n",
+    "data[\"num of outcomes\"] = num_out\n",
+    "data[\"dimension behavior\"] = dimX\n",
+    "data[\"dimension base\"] = dim_base\n",
+    "\n",
+    "NAME = '{}-num_obs-{}-len_seq-{}-out_max-{}-dim_behavior-{}-dim_base'.format(num_obs, len_seq, num_out, dimX, dim_base)\n",
+    "\n",
+    "with open(\"dimension_witness/\" + NAME + '.json', 'w') as fp:\n",
+    "    json.dump(data, fp, indent=2)\n",
+    "    \n",
+    "np.save(\"dimension_witness/\" + NAME + \"-moment_matrix\", X)\n",
+    "np.save(\"dimension_witness/\" + NAME + \"-state\", rho)\n",
+    "np.save(\"dimension_witness/\" + NAME + \"-measurements\", P)"
    ]
   },
   {
