--- a/public/Scenario_Classification_via_the_number_of_LI_Moment_Matrices.ipynb
+++ b/public/Scenario_Classification_via_the_number_of_LI_Moment_Matrices.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from analytics_v2 import parse_LI, plot_LI\n",
+    "from analytics import parse_LI, plot_LI\n",
     "import matplotlib.pyplot as plt"
    ]
   },
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
        " '223': {'LI num': [61, 61, 61], 'dimension': [3, 4, 5]}}"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 4,
    "metadata": {
     "scrolled": false
    },
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -235,6 +235,13 @@
     "plt.tick_params(axis='both', labelsize=18)\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
