--- a/public/Minimum visibility in M22.ipynb
+++ b/public/Minimum visibility in M22.ipynb
@@ -30,24 +30,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4 0.8143929636753373\n",
-      "6 0.8042777187771477\n",
-      "3 0.8343138454891896\n",
-      "5 0.7773938094296884\n"
+      "4 0.8143929636753373 1.0000000316514446\n",
+      "0.78578\n",
+      "6 0.8042777187771477 1.0000000000021527\n",
+      "0.993\n",
+      "3 0.8343138454891896 1.0000000371498088\n",
+      "0.36083\n",
+      "5 0.7773938094296884 1.0000000564891707\n",
+      "0.9633\n"
      ]
     }
    ],
    "source": [
     "for item in data:\n",
     "    if item['maximum length of sequences'] == 2 and item['num of outcomes'] == 2:\n",
-    "        print(item['num of observables'],min(item['visibilities']))"
+    "        print(item['num of observables'],min(item['visibilities']),max(item['visibilities']))\n",
+    "        print(len([v for v in item['visibilities'] if v < 0.999])/len(item['visibilities']))"
    ]
   },
   {
