--- a/public/Inequality_in_233_scenario.ipynb
+++ b/public/Inequality_in_233_scenario.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,45 +73,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'data_basis/3-dim-2-num_obs-3-len_seq-3-num_out.npy'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-45-ac1f8631c521>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Import basis\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mbasis_filename\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"data_basis/3-dim-2-num_obs-3-len_seq-3-num_out.npy\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mX_basis\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbasis_filename\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/usr/local/lib/python3.7/site-packages/numpy/lib/npyio.py\u001b[0m in \u001b[0;36mload\u001b[0;34m(file, mmap_mode, allow_pickle, fix_imports, encoding)\u001b[0m\n\u001b[1;32m    426\u001b[0m         \u001b[0mown_fid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    427\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 428\u001b[0;31m         \u001b[0mfid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos_fspath\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"rb\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    429\u001b[0m         \u001b[0mown_fid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    430\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'data_basis/3-dim-2-num_obs-3-len_seq-3-num_out.npy'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import basis\n",
-    "basis_filename = \"data_basis/3-dim-2-num_obs-3-len_seq-3-num_out.npy\"\n",
+    "basis_filename = \"data_basis/2-dim-3-num_obs-2-len_seq-2-num_out-1-level.npy\"\n",
     "X_basis = np.load(basis_filename)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dimX = 4\n",
-    "dim_base = 3\n",
+    "dimX = 3\n",
+    "dim_base = 2\n",
     "num_obs = 2\n",
-    "len_seq = 3\n",
-    "num_out = 3\n",
+    "len_seq = 2\n",
+    "num_out = 2\n",
     "remove_last_out = True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,14 +108,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8201995428547537\n"
+      "0.7421789215215785\n"
      ]
     }
    ],
@@ -148,14 +135,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-0.7488070170722095\n"
+      "-0.9085842392451938\n"
      ]
     }
    ],
@@ -166,14 +153,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-0.5690064392946877\n"
+      "-0.6507631284230208\n"
      ]
     }
    ],
@@ -184,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,19 +201,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'NAME' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-0942bd44bb31>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;34m\"dimension_witness/\"\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mNAME\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\"-state\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'NAME' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "'dimension_witness/2-num_obs-2-len_seq-2-out_max-3-dim_behavior-2-dim_base-state'"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -242,7 +228,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dimX = 3\n",
+    "dim_base = 2\n",
+    "num_obs = 3\n",
+    "len_seq = 2\n",
+    "num_out = 2\n",
+    "remove_last_out = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,23 +251,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(4, 4)\n"
+      "(3, 3)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(0.9999999999999994+0j)"
+       "(0.9999999999999997+0j)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,23 +281,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(2, 3, 4, 4)\n"
+      "(3, 2, 3, 3)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(0.9999999999999994+0j)"
+       "(0.9999999999999997+0j)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,117 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 1.00000000e+00+0.00000000e+00j, -9.02056208e-17+6.93889390e-18j,\n",
-       "         4.85722573e-17+5.55111512e-17j, -1.11022302e-16+1.66533454e-16j],\n",
-       "       [-9.02056208e-17-6.93889390e-18j,  1.00000000e+00+0.00000000e+00j,\n",
-       "         3.46944695e-18-2.51534904e-16j, -8.32667268e-17+6.93889390e-18j],\n",
-       "       [ 4.85722573e-17-5.55111512e-17j,  3.46944695e-18+2.51534904e-16j,\n",
-       "         1.00000000e+00+0.00000000e+00j, -6.93889390e-17-1.38777878e-17j],\n",
-       "       [-1.11022302e-16-1.66533454e-16j, -8.32667268e-17-6.93889390e-18j,\n",
-       "        -6.93889390e-17+1.38777878e-17j,  1.00000000e+00+0.00000000e+00j]])"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#### Completness\n",
-    "P[0][0]+P[0][1]+P[0][2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 1.00000000e+00+0.00000000e+00j,  4.02455846e-16+6.93889390e-17j,\n",
-       "         0.00000000e+00-1.66533454e-16j,  5.55111512e-17-6.24500451e-17j],\n",
-       "       [ 4.02455846e-16-6.93889390e-17j,  1.00000000e+00+0.00000000e+00j,\n",
-       "         8.32667268e-17-5.55111512e-17j, -7.28583860e-17+1.11022302e-16j],\n",
-       "       [ 0.00000000e+00+1.66533454e-16j,  8.32667268e-17+5.55111512e-17j,\n",
-       "         1.00000000e+00+0.00000000e+00j,  5.55111512e-17-2.77555756e-17j],\n",
-       "       [ 5.55111512e-17+6.24500451e-17j, -7.28583860e-17-1.11022302e-16j,\n",
-       "         5.55111512e-17+2.77555756e-17j,  1.00000000e+00+0.00000000e+00j]])"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#### Completness\n",
-    "P[1][0]+P[1][1]+P[1][2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 0.55914889+0.j        ,  0.10841001-0.02721568j,\n",
-       "        -0.15703023-0.00731945j, -0.19230265-0.41510915j],\n",
-       "       [ 0.10841001+0.02721568j,  0.02234364+0.j        ,\n",
-       "        -0.03008938-0.00906232j, -0.01707963-0.08984304j],\n",
-       "       [-0.15703023+0.00731945j, -0.03008938+0.00906232j,\n",
-       "         0.04419586+0.j        ,  0.0594398 +0.1140611j ],\n",
-       "       [-0.19230265+0.41510915j, -0.01707963+0.08984304j,\n",
-       "         0.0594398 -0.1140611j ,  0.3743116 +0.j        ]])"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "P[0][0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 0.55914889+0.j        ,  0.10841001-0.02721568j,\n",
-       "        -0.15703023-0.00731945j, -0.19230265-0.41510915j],\n",
-       "       [ 0.10841001+0.02721568j,  0.02234364+0.j        ,\n",
-       "        -0.03008938-0.00906232j, -0.01707963-0.08984304j],\n",
-       "       [-0.15703023+0.00731945j, -0.03008938+0.00906232j,\n",
-       "         0.04419586+0.j        ,  0.0594398 +0.1140611j ],\n",
-       "       [-0.19230265+0.41510915j, -0.01707963+0.08984304j,\n",
-       "         0.0594398 -0.1140611j ,  0.3743116 +0.j        ]])"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "P[0][0]@P[0][0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,15 +320,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
     "X = np.eye(len(sequences)+1, dtype=complex)\n",
     "for i, seq_row in enumerate(sequences):\n",
     "    Pi = proj_mul([P[k] for k in seq_row[1]], seq_row[0])\n",
-    "    #X[0,i+1] = np.trace(Pi @ np.eye(dim) @ rho)\n",
-    "    #X[i+1,0] = np.conjugate(X[0,i+1])#np.trace(np.eye(dim) @ np.conjugate(Pi.T) @ rho)\n",
     "    for j, seq_col in enumerate(sequences):\n",
     "        if i==j:\n",
     "            Pj= proj_mul([P[k] for k in seq_col[1]], seq_col[0])\n",
@@ -447,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,16 +345,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-0.7488070170722096"
+       "-0.6372680915558379"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -477,23 +365,233 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'X_basis' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-44-28f05d58bc62>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mNPA_bound\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mineq\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"Inequality\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mX_basis\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'X_basis' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "-0.4790466314231945"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "NPA_bound(ineq[\"Inequality\"],X_basis)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "eta, coef = single_behavior_visibility(X, X_basis)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8417785146809114"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eta = cp.Variable((1, 1))\n",
+    "alpha = cp.Variable((len(X_basis), 1))\n",
+    "beta = cp.Variable((len(X_basis), 1))\n",
+    "M = cp.Variable(X_basis[0].shape)\n",
+    "N = cp.Variable(X_basis[0].shape)\n",
+    "\n",
+    "constraints = [N >> 0]\n",
+    "constraints += [N == sum([beta[j]*X_basis[j] for j in range(len(X_basis))])]\n",
+    "constraints += [N[0,0] == 1 - eta]\n",
+    "\n",
+    "for i in range(1,len(X)):\n",
+    "    constraints += [\n",
+    "        eta*X[i,i] + N[i,i] == M[i,i]\n",
+    "    ]\n",
+    "\n",
+    "constraints += [M >> 0]\n",
+    "constraints += [M == sum([alpha[j]*X_basis[j] for j in range(len(X_basis))])]\n",
+    "constraints += [M[0,0] == 1]\n",
+    "\n",
+    "prob = cp.Problem(cp.Maximize(eta),\n",
+    "                  constraints)\n",
+    "prob.solve(solver=cp.MOSEK, verbose=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8417784938509926"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eta = cp.Variable((1, 1))\n",
+    "alpha = cp.Variable((len(X_basis), 1))\n",
+    "beta = cp.Variable((len(X_basis), 1))\n",
+    "# M = cp.Variable(X_basis[0].shape)\n",
+    "# N = cp.Variable(X_basis[0].shape)\n",
+    "\n",
+    "constraints = [sum([beta[j]*X_basis[j] for j in range(len(X_basis))]) >> 0]\n",
+    "# constraints += [N == sum([beta[j]*X_basis[j] for j in range(len(X_basis))])]\n",
+    "constraints += [sum([beta[j]*X_basis[j] for j in range(len(X_basis))])[0,0] == 1 - eta]\n",
+    "\n",
+    "for i in range(1,len(X)):\n",
+    "    constraints += [\n",
+    "        eta*X[i,i] + sum([beta[j]*X_basis[j] for j in range(len(X_basis))])[i,i] == sum([alpha[j]*X_basis[j] for j in range(len(X_basis))])[i,i]\n",
+    "    ]\n",
+    "\n",
+    "constraints += [sum([alpha[j]*X_basis[j] for j in range(len(X_basis))]) >> 0]\n",
+    "# constraints += [M == sum([alpha[j]*X_basis[j] for j in range(len(X_basis))])]\n",
+    "constraints += [sum([alpha[j]*X_basis[j] for j in range(len(X_basis))])[0,0] == 1]\n",
+    "\n",
+    "prob = cp.Problem(cp.Maximize(eta),\n",
+    "                  constraints)\n",
+    "prob.solve(solver=cp.MOSEK, verbose=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Variable(())]"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "constraints[-1].dual_variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def braket(b,k,shape):\n",
+    "    BK = np.zeros(shape)\n",
+    "    BK[b,k] = 1\n",
+    "    return BK"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = cp.Variable((1, 1))\n",
+    "r = cp.Variable((1, 1))\n",
+    "gamma = cp.Variable((len(X)-1, 1))\n",
+    "B = cp.Variable(X_basis[0].shape)\n",
+    "A = cp.Variable(X_basis[0].shape)\n",
+    "\n",
+    "constraints = [r == 1 + sum([gamma[i-1]*X[i,i] for i in range(1,len(X))])]\n",
+    "constraints += [sum([braket(i,i,X_basis[0].shape)*gamma[i-1] for i in range(1,len(X))]) >> A - x*braket(0,0,X_basis[0].shape)] \n",
+    "constraints += [sum([braket(i,i,X_basis[0].shape)*gamma[i-1] for i in range(1,len(X))]) << -B + r*braket(0,0,X_basis[0].shape)] \n",
+    "\n",
+    "for i in range(len(X_basis)):\n",
+    "    constraints += [\n",
+    "        cp.trace(X_basis[i] @ A) == 0\n",
+    "    ]\n",
+    "    constraints += [\n",
+    "        cp.trace(X_basis[i] @ B) == 0\n",
+    "    ]\n",
+    "    \n",
+    "prob = cp.Problem(cp.Minimize(x+r),\n",
+    "                  constraints)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8417785754109901"
+      ]
+     },
+     "execution_count": 129,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prob.solve(solver=cp.MOSEK, verbose=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.47906978]])"
+      ]
+     },
+     "execution_count": 130,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x.value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.84177858]])"
+      ]
+     },
+     "execution_count": 132,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x.value+r.value"
    ]
   },
   {
