--- a/public/workspace.ipynb
+++ b/public/workspace.ipynb
@@ -16,6 +16,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def basis_prop(filename):\n",
+    "    X_basis = np.load(filename)\n",
+    "    print(\"number of LI independent: \",len(X_basis))\n",
+    "    print(\"moment matrix shape: \",X_basis[0].shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [],
@@ -27,47 +39,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# meta data to generate a random moment matrix\n",
-    "\n",
-    "dimX = 4\n",
-    "num_obs = 2\n",
-    "len_seq = 3\n",
-    "num_out = 3\n",
-    "#level = 1\n",
-    "remove_last_out = True"
+    "len(X_basis)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.9481364854355416"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "eta_min = 1\n",
-    "\n",
-    "for __ in range(10):\n",
-    "    X = rand_moment(dimX, num_obs, len_seq, num_out, [len_seq], remove_last_out)\n",
-    "    eta = single_behavior_visibility(X, X_basis)\n",
-    "    if eta < eta_min:\n",
-    "        eta_min = eta\n",
-    "        Xmin = X\n",
-    "        \n",
-    "eta_min"
+    "# Import basis\n",
+    "basis_filename = \"data_basis/3-dim-2-num_obs-3-len_seq-3-num_out.npy\"\n",
+    "X_basis = np.load(basis_filename)"
    ]
   },
   {
@@ -94,7 +81,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
